[gd_scene load_steps=9 format=2]

[ext_resource path="res://materials/stone.tres" type="Material" id=1]
[ext_resource path="res://scripts/dynamic_room.gd" type="Script" id=2]

[sub_resource type="ProceduralSky" id=5]
sky_top_color = Color( 0.32549, 0.403922, 0.45098, 1 )
ground_horizon_color = Color( 0.384314, 0.278431, 0.184314, 1 )
sun_color = Color( 1, 0.976471, 0.635294, 1 )

[sub_resource type="Environment" id=6]
background_mode = 2
background_sky = SubResource( 5 )
ambient_light_color = Color( 0.113725, 0.211765, 0.25098, 1 )

[sub_resource type="CubeMesh" id=1]

[sub_resource type="BoxShape" id=2]

[sub_resource type="CubeMesh" id=3]

[sub_resource type="BoxShape" id=4]

[node name="Spatial2" type="Spatial"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )
script = ExtResource( 2 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 6 )

[node name="Navigation" type="Navigation" parent="."]

[node name="nmi" type="NavigationMeshInstance" parent="Navigation"]

[node name="ground" type="StaticBody" parent="Navigation/nmi"]
transform = Transform( 40, 0, 0, 0, 0.5, 0, 0, 0, 40, 0, 0, 0 )

[node name="MeshInstance" type="MeshInstance" parent="Navigation/nmi/ground"]
mesh = SubResource( 1 )
material/0 = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="Navigation/nmi/ground"]
shape = SubResource( 2 )

[node name="wall1" type="StaticBody" parent="Navigation/nmi"]
transform = Transform( 1, 0, 0, 0, 10, 0, 0, 0, 40, 40, 10, 0 )

[node name="MeshInstance" type="MeshInstance" parent="Navigation/nmi/wall1"]
mesh = SubResource( 3 )
material/0 = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="Navigation/nmi/wall1"]
shape = SubResource( 4 )

[node name="wall2" type="StaticBody" parent="Navigation/nmi"]
transform = Transform( 1, 0, 0, 0, 10, 0, 0, 0, 40, -40, 10, 0 )

[node name="MeshInstance" type="MeshInstance" parent="Navigation/nmi/wall2"]
mesh = SubResource( 3 )
material/0 = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="Navigation/nmi/wall2"]
shape = SubResource( 4 )

[node name="wall3" type="StaticBody" parent="Navigation/nmi"]
transform = Transform( -4.37114e-08, 0, 40, 0, 10, 0, -1, 0, -1.74846e-06, 0, 10, 40 )

[node name="MeshInstance" type="MeshInstance" parent="Navigation/nmi/wall3"]
mesh = SubResource( 3 )
material/0 = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="Navigation/nmi/wall3"]
shape = SubResource( 4 )

[node name="wall4" type="StaticBody" parent="Navigation/nmi"]
transform = Transform( -4.37114e-08, 0, 40, 0, 10, 0, -1, 0, -1.74846e-06, 0, 10, -40 )

[node name="MeshInstance" type="MeshInstance" parent="Navigation/nmi/wall4"]
mesh = SubResource( 3 )
material/0 = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="Navigation/nmi/wall4"]
shape = SubResource( 4 )
